[gd_scene load_steps=6 format=2]

[ext_resource path="res://deli_items/born_pink.png" type="Texture" id=1]
[ext_resource path="res://scripts/deli_items/born_pink.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 38.6216, 68.2336 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("bp_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 480, 304 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "born_pink"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("bp_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 480, 304 ), Vector2( 480, 74 ), Vector2( 480, 304 ) ]
}

[node name="born_pink" type="Area2D"]
position = Vector2( -36, -16 )
collision_layer = 16
collision_mask = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="bp_sprite" type="Sprite" parent="."]
position = Vector2( 480, 304 )
scale = Vector2( 0.45, 0.3 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 448.332, 239.429 )
rotation = -1.16937
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/born_pink = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_born_pink_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
